<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Mercado"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="485dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Buscar"></EditText>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_below="@+id/edittext1" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/my_fab"
        android:layout_alignEnd="@+id/my_fab"
        android:text="Publicar"
        android:layout_alignRight="@+id/my_fab" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/my_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/ic_library_add_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp" />

    <Button
        android:id="@+id/previo"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#0076b2aa"
        android:drawable="@android:color/transparent"
        android:text="Previo" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/previo"
        android:layout_toRightOf="@+id/previo"
        android:background="@android:color/transparent"
        android:drawable="@android:color/transparent"
        android:text="Siguiente" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        app:srcCompat="@android:drawable/ic_menu_sort_alphabetically"
        android:layout_alignParentRight="true"
        android:layout_marginRight="0dp" />

    <EditText
        android:id="@+id/number"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/siguiente"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number" />

</RelativeLayout>