...
                android:hint="Hasta (Click para editar)"
                android:inputType="time"
                android:textColor="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/filtrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:text="Filtrar" />
    </LinearLayout>


</LinearLayout>

